#1 - Added new Countries API endpoint
